--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -7,7 +7,7 @@
         <div class="list-group">
             {% for link in links %}
                 <a href="{{ link.url }}" class="list-group-item">{{ link.title }}
-                <span class="small">Submitted by {{ user.name }}</span>
+                <span class="small">Submitted by {{ link.name }}</span> 
                 </a>
             {% endfor %}
         </div>
